navbar and footer finished

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -613,3 +613,180 @@
      width: 100%;
    }
  }
+
+
+
+ /*--------------------------------------------------
+     [Back To Top Theme Button]
+ ----------------------------------------------------*/
+ .back-to-top {
+   position: fixed;
+   right: 10px;
+   bottom: 10px;
+   display: inline-block;
+   z-index: 9;
+   width: 40px;
+   height: 40px;
+   font-size: 11px;
+   font-weight: 400;
+   color: #fff;
+   text-align: center;
+   line-height: 3;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+   background: #515769;
+   border-radius: 3px;
+   visibility: hidden;
+   opacity: 0;
+   padding: 5px;
+   -webkit-transform: translate3d(0, 50px, 0);
+   -moz-transform: translate3d(0, 50px, 0);
+   transform: translate3d(0, 50px, 0);
+   transition-duration: 300ms;
+   transition-property: all;
+   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+ }
+
+ .back-to-top:hover {
+   color: #fff;
+   transition-duration: 300ms;
+   transition-property: all;
+   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+ }
+
+ .back-to-top:focus, .back-to-top:hover {
+   text-decoration: none;
+ }
+
+ /* The Button Becomes Visible */
+ .back-to-top.back-to-top-is-visible {
+   visibility: visible;
+   opacity: .6;
+   -webkit-transform: translate3d(0, 0, 0);
+   -moz-transform: translate3d(0, 0, 0);
+   transform: translate3d(0, 0, 0);
+   transition-duration: 300ms;
+   transition-property: all;
+   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+ }
+
+ .back-to-top.back-to-top-is-visible:hover {
+   opacity: 1;
+   transition-duration: 300ms;
+   transition-property: all;
+   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+ }
+
+ /* If the user keeps scrolling down, the button is out of focus and becomes less visible */
+ .back-to-top.back-to-top-fade-out {
+   opacity: .4;
+ }
+
+ .back-to-top.back-to-top-fade-out:hover {
+   opacity: 1;
+   transition-duration: 300ms;
+   transition-property: all;
+   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+ }
+
+ /*--------------------------------------------------
+     [Cart dropdown items]
+ ----------------------------------------------------*/
+
+ .cart-dropdown {
+   display: none;
+   position: absolute;
+   width: 270px;
+   right: 0;
+   top: 100%;
+   list-style: none;
+   margin: 0;
+   margin-top: -14px;
+   padding: 25px 20px;
+   text-align: left;
+   background-color: #ffffff;
+   border: 1px solid #ededed;
+   cursor: default;
+ }
+
+ .dropdown-menu .cart-item {
+   position: relative;
+   display: table;
+   width: 100%;
+   padding: 0 0 15px 0;
+   border-bottom: 1px solid #ededed;
+   margin-bottom: 15px;
+ }
+
+ .dropdown-menu .cart-item .item-thumb,
+ .dropdown-menu .cart-item .item-details {
+   display: table-cell;
+   vertical-align: top;
+ }
+
+ .dropdown-menu .cart-item .item-thumb {
+   width: 80px;
+   padding-right: 15px;
+ }
+
+ .dropdown-menu .cart-item .item-thumb > img {
+   width: 100%;
+ }
+
+ .dropdown-menu .cart-item .item-title {
+   font-size: 14px;
+   font-weight: normal;
+   padding-right: 20px;
+   margin-bottom: 6px;
+ }
+
+ .dropdown-menu .cart-item .item-title > a {
+   color: #606060;
+   text-decoration: none;
+ }
+
+ .dropdown-menu .cart-item .item-title > a:hover, .dropdown-menu .cart-item .item-title > a:focus {
+   color: #a6a6a6;
+   text-decoration: none;
+ }
+
+ .dropdown-menu .cart-item .item-price {
+   font-size: 14px;
+   color: #999;
+   margin-bottom: 0;
+ }
+
+ .dropdown-menu .cart-item .close-btn {
+   position: absolute;
+   top: -3px;
+   right: -4px;
+   font-size: 16px;
+ }
+
+ .dropdown-menu .cart-item .close-btn:hover {
+   color: #ef0568;
+ }
+
+ .dropdown .cart-subtotal {
+   display: table;
+   width: 100%;
+ }
+
+ .dropdown .cart-subtotal .column {
+   display: table-cell;
+   vertical-align: top;
+   width: 50%;
+ }
+
+ .dropdown .cart-subtotal span {
+   display: block;
+   font-size: 14px;
+   color: #999;
+ }
+
+ .dropdown .cart-subtotal .amount {
+   font-size: 14px;
+   color: #606060;
+   font-weight: 500;
+   text-align: right;
+ }
