--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -22,29 +22,29 @@ $(document).ready(function(){
                 <div class="col-sm-2 sm-margin-b-30">
                     <!-- List -->
                     <ul class="list-unstyled footer-list">
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Home</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">About</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Work</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Contact</a></li>
+                        <li class="footer-list-item"><%= link_to("首页", root_path) %></li>
+                        <li class="footer-list-item"><%= link_to("时间商城", products_path) %></li>
+                        <li class="footer-list-item"><%= link_to("常见问题", products_path) %></li>
+                        <li class="footer-list-item"><%= link_to("联系我们", products_path) %></li>
                     </ul>
                     <!-- End List -->
                 </div>
                 <div class="col-sm-2 sm-margin-b-30">
                     <!-- List -->
                     <ul class="list-unstyled footer-list">
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Twitter</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Facebook</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Instagram</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">YouTube</a></li>
+                        <li class="footer-list-item"><a href="http://twitter.com/">Twitter</a></li>
+                        <li class="footer-list-item"><a href="http://facebook.com/">Facebook</a></li>
+                        <li class="footer-list-item"><a href="http://intagram.com/">Instagram</a></li>
+                        <li class="footer-list-item"><a href="http://youtube.com/">YouTube</a></li>
                     </ul>
                     <!-- End List -->
                 </div>
                 <div class="col-sm-3">
                     <!-- List -->
                     <ul class="list-unstyled footer-list">
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Subscribe to Our Newsletter</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Privacy Policy</a></li>
-                        <li class="footer-list-item"><a href="http://keenthemes.com/">Terms &amp; Conditions</a></li>
+                        <li class="footer-list-item"><a href="http://an-lee.pro/">Subscribe to Our Newsletter</a></li>
+                        <li class="footer-list-item"><a href="http://an-lee.pro/">Privacy Policy</a></li>
+                        <li class="footer-list-item"><a href="http://an-lee.pro/">Terms &amp; Conditions</a></li>
                     </ul>
                     <!-- End List -->
                 </div>
