try welcome index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -449,6 +449,7 @@
  .footer .footer-list-item {
    color: #777984;
    margin-bottom: 15px;
+   font-size: 10px;
  }
 
  .footer .footer-list-item:last-child {
