--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
 <div class="bg-color-sky-light">
+  <div class="container" style="padding-bottom:100px;">
+    <h3 class="text-center">分类</h3>
   <% @products.each do |product| %>
-    <div class="col-xs-6 col-md-3">
+    <div class="col-xs-12 col-md-3">
       <%= link_to product_path(product) do %>
         <% if product.image.present? %>
           <%= image_tag(product.image.thumb.url, class:"thumbnail") %>
@@ -11,4 +13,5 @@
       <% end %>
     </div>
   <% end %>
+</div>
 </div>
