navbar_footer second_v

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,18 +1,4 @@
-<!--
-<footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br>
-  <p>Design By <a href="https://an-lee.pro" data-toggle="tooltip" title="Visit an-lee's blog">an-lee</a> & <a href="https://meiputi-blog.logdown.com" data-toggle="tooltip" title="Visit meiputi's blog">meiputi</a></p>
-</footer>
 
-<script>
-$(document).ready(function(){
-    // Initialize Tooltip
-    $('[data-toggle="tooltip"]').tooltip();
-})
-</script>
--->
 <!--========== FOOTER ==========-->
 <footer class="footer">
     <!-- Links -->
@@ -58,7 +44,7 @@ $(document).ready(function(){
     <div class="content container">
         <div class="row">
             <div class="col-xs-6">
-              <h4><i class="glyphicon glyphicon-time", style="color: #17bed2;padding-top:10px;"></i>
+              <h4><i class="glyphicon glyphicon-time", style="color: #17bed2;"></i>
               TimeEx</h4>
             </div>
             <div class="col-xs-6 text-right">
