--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -8,10 +8,10 @@
                 <div class="col-sm-2 sm-margin-b-30">
                     <!-- List -->
                     <ul class="list-unstyled footer-list">
-                        <li class="footer-list-item"><%= link_to("首页", root_path) %></li>
-                        <li class="footer-list-item"><%= link_to("时间商城", products_path) %></li>
-                        <li class="footer-list-item"><%= link_to("常见问题", products_path) %></li>
-                        <li class="footer-list-item"><%= link_to("联系我们", products_path) %></li>
+                        <li class="footer-list-item"><%= link_to("HOME", root_path) %></li>
+                        <li class="footer-list-item"><%= link_to("TIME SHOP", products_path) %></li>
+                        <li class="footer-list-item"><%= link_to("FQA", products_path) %></li>
+                        <li class="footer-list-item"><%= link_to("CONTACT", products_path) %></li>
                     </ul>
                     <!-- End List -->
                 </div>
