--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -30,17 +30,17 @@
             </li>
               <!-- End Home -->
 
-              <!-- About -->
+              <!-- Shop -->
             <li class="nav-item">
                 <%= link_to("时间商城", products_path, class:"nav-item-child") %>
             </li>
-              <!-- End About -->
+              <!-- End Shop -->
 
-            <!-- Work -->
+            <!-- FQA -->
             <li class="nav-item">
                 <%= link_to("常见问题", root_path, class:"nav-item-child") %>
             </li>
-            <!-- End Work -->
+            <!-- End FQA -->
 
             <!-- Contact -->
             <li class="nav-item">
