--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,39 +1,42 @@
-<div class="bg-color-sky-light">
-  <div class="section-seperator">
+<div class="bg-color-sky-light" style="padding-top:50px;padding-bottom:50px;">
+  <div class="container">
+    <div class="content">
     <div class="work">
-      <div class="work-overlay">
-          <img class="full-width img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-time_crop.jpg" alt="time">
-      </div>
-      <div class="work-content">
-          <h2 class="color-white margin-b-5">时间交易所</h2>
-          <p class="color-white margin-b-0">购买优质的知识服务相当于购买别人的时间，延长您的寿命。</p>
-      </div>
-      <a class="content-wrapper-link" href="#"></a>
+        <div class="work-overlay">
+            <img class="full-width img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-time_crop.jpg" alt="time">
+        </div>
+        <div class="work-content">
+            <h2 class="color-white margin-b-5">时间交易所</h2>
+            <p class="color-white margin-b-0">购买优质的知识服务相当于购买别人的时间，延长您的寿命。</p>
+        </div>
+        <a class="content-wrapper-link" href="#"></a>
     </div>
+  </div>
   </div>
 </div>
 
 <!-- Features -->
-<div class="section-seperator">
+<div class="container">
+  <div class="section-seperator">
   <div class="content-md">
     <div class="row">
       <div class="col-sm-4 sm-margin-b-50">
           <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-            <h3>购买1星期</h3>
+            <h3>Buy One Week</h3>
             <p>一个星期可以做什么？可以读一本好书。然而，好书太多，时间太少。为您精心制作的好书干货音频，让你在半小时内听完一本好书。</p>
             <a class="link" href="#">Read More</a>
           </div>
       </div>
       <div class="col-sm-4 sm-margin-b-50">
           <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
-            <h3>购买3个月</h3>
+            <h3>Buy Three Months</h3>
             <p>3个月可以做什么？足够学习一门改变您人生的新技能。可是上班太忙，时间太少。为您精心挑选的优质课程，让您在3个月内获得双倍学习效果。</p>
             <a class="link" href="#">Read More</a>
           </div>
       </div>
       <div class="col-sm-4">
         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-            <h3>购买7年</h3>
+            <h3>Buy Seven Years</h3>
             <p>人的一生，其实可以活很多遍，7年就是一辈子。只要敢于迈出第一步。这里有您需要的学习圈、优质战友和下一个辈子的起点。</p>
             <a class="link" href="#">Read More</a>
         </div>
@@ -43,60 +46,66 @@
   </div>
 </div>
 <!-- End Features -->
-
+</div>
 
 <!-- Team -->
-<div class="section-seperator">
-    <div class="content-md">
-        <div class="row margin-b-40">
-            <div class="col-sm-6">
-                <h2>优质时间推荐</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
-            </div>
-        </div>
-        <!--// end row -->
+<div class="bg-color-sky-light">
 
-        <div class="row">
-            <!-- Team -->
-            <div class="col-sm-4 sm-margin-b-50">
-                <div class="bg-color-white margin-b-20">
-                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-01.jpg" alt="Team Image">
-                    </div>
-                </div>
-                <h4><a href="#">Alicia Keys</a> <span class="text-uppercase margin-l-20">Project Manager</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                <a class="link" href="#">Read More</a>
-            </div>
-            <!-- End Team -->
+<div class="container">
+  <div class="section-seperator">
+      <div class="content-md">
+          <div class="row margin-b-40">
+              <div class="col-sm-6">
+                  <h2>优质时间推荐</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+              </div>
+          </div>
+          <!--// end row -->
 
-            <!-- Team -->
-            <div class="col-sm-4 sm-margin-b-50">
-                <div class="bg-color-white margin-b-20">
-                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-02.jpg" alt="Team Image">
-                    </div>
-                </div>
-                <h4><a href="#">James Millner</a> <span class="text-uppercase margin-l-20">Lead Developer</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                <a class="link" href="#">Read More</a>
-            </div>
-            <!-- End Team -->
+          <div class="row">
+              <!-- Team -->
+              <div class="col-sm-4 sm-margin-b-50">
+                  <div class="bg-color-white margin-b-20">
+                      <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-01.jpg" alt="Team Image">
+                      </div>
+                  </div>
+                  <h4><a href="#">Alicia Keys</a> <span class="text-uppercase margin-l-20">Project Manager</span></h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                  <a class="link" href="#">Read More</a>
+              </div>
+              <!-- End Team -->
 
-            <!-- Team -->
-            <div class="col-sm-4 sm-margin-b-50">
-                <div class="bg-color-white margin-b-20">
-                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-03.jpg" alt="Team Image">
-                    </div>
-                </div>
-                <h4><a href="#">Scarlet Johanson</a> <span class="text-uppercase margin-l-20">Designer</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                <a class="link" href="#">Read More</a>
-            </div>
-            <!-- End Team -->
-        </div>
-        <!--// end row -->
-    </div>
+              <!-- Team -->
+              <div class="col-sm-4 sm-margin-b-50">
+                  <div class="bg-color-white margin-b-20">
+                      <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-02.jpg" alt="Team Image">
+                      </div>
+                  </div>
+                  <h4><a href="#">James Millner</a> <span class="text-uppercase margin-l-20">Lead Developer</span></h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                  <a class="link" href="#">Read More</a>
+              </div>
+              <!-- End Team -->
+
+              <!-- Team -->
+              <div class="col-sm-4 sm-margin-b-50">
+                  <div class="bg-color-white margin-b-20">
+                      <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-03.jpg" alt="Team Image">
+                      </div>
+                  </div>
+                  <h4><a href="#">Scarlet Johanson</a> <span class="text-uppercase margin-l-20">Designer</span></h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                  <a class="link" href="#">Read More</a>
+              </div>
+              <!-- End Team -->
+          </div>
+          <!--// end row -->
+      </div>
+  </div>
+</div>
+
 </div>
 <!-- End Team -->
