--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,152 @@
  @import "font-awesome";
  @import "simple-line-icons";
 
+
+ .form-control {
+   display: block;
+   width: 100%;
+   line-height: 1.5;
+   height: 48px;
+   font-size: 14px;
+   color: #606060;
+   text-transform: none;
+   border: 2px solid #ededed;
+   border-radius: 5px;
+   background-color: #fff;
+   padding: 0 16px;
+   margin-bottom: 24px;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   -o-appearance: none;
+   appearance: none;
+   -webkit-transition: all 0.3s;
+   -o-transition: all 0.3s;
+   transition: all 0.3s;
+ }
+
+ .form-control:focus {
+   border-color: #77cde3;
+   outline: none;
+ }
+
+ .form-control::-moz-placeholder {
+   color: #606060;
+   opacity: 1;
+ }
+
+ .form-control:-ms-input-placeholder {
+   color: #606060;
+ }
+
+ .form-control::-webkit-input-placeholder {
+   color: #606060;
+ }
+
+ .form-control.placeholder {
+   color: #606060;
+ }
+
+ textarea.form-control {
+   height: auto !important;
+   padding: 13px 16px !important;
+ }
+
+ .form-group {
+   margin-bottom: 24px;
+ }
+
+ .form-element {
+   position: relative;
+   margin-bottom: 24px;
+ }
+
+ .form-element > i {
+   display: block;
+   position: absolute;
+   left: 0;
+   top: 13px;
+   font-size: 20px;
+ }
+
+ .form-group .form-control,
+ .form-element .form-control {
+   margin-bottom: 0;
+ }
+
+ label {
+   display: block;
+   color: #606060;
+   font-size: 14px;
+   margin-bottom: 8px;
+   font-weight: 500;
+ }
+
+ select.form-control::-ms-expand {
+   display: none;
+ }
+
+ select option {
+   color: #606060;
+ }
+
+ .form-control-sm {
+   height: 36px;
+ }
+
+ .form-element:before {
+   position: absolute;
+   display: block;
+   font-family: 'Material Icons';
+   font-size: 20px;
+   top: 50%;
+   right: 14px;
+   line-height: 1;
+   margin-top: -10px;
+   opacity: 0;
+   -webkit-transition: opacity 0.3s;
+   -o-transition: opacity 0.3s;
+   transition: opacity 0.3s;
+ }
+
+ .form-element.error .form-control {
+   border-color: #ef0568;
+   padding-right: 40px;
+ }
+
+ .form-element.error:before {
+   content: "\e5c9";
+   color: #ef0568;
+   opacity: 1;
+ }
+
+ .form-element.error:focus {
+   border-color: #ef0568;
+ }
+
+ .form-element.valid .form-control {
+   border-color: #a7c04d;
+   padding-right: 40px;
+ }
+
+ .form-element.valid:before {
+   content: "\e5ca";
+   color: #a7c04d;
+   opacity: 1;
+ }
+
+ .form-element.valid:focus {
+   border-color: #a7c04d;
+ }
+
+ .form-element.form-select:before {
+   content: "\e5c5";
+   font-size: 22px;
+   margin-top: -11px;
+   color: #606060;
+   opacity: 1;
+ }
+
+
  /*--------------------------------------------------
      [Cart dropdown items]
  ----------------------------------------------------*/
