--- a/app/views/account/orders/index.html.erb
+++ b/app/views/account/orders/index.html.erb
@@ -1,18 +1,20 @@
-<h2>Order List</h2>
+<div class="container">
+  <h2>Order List</h2>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th> # </th>
-      <th> Created Time </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @orders.each do |order| %>
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td> <%= link_to(order.id, order_path(order.token)) %> </td>
-        <td> <%= order.created_at.to_s(:long) %> </td>
+        <th> # </th>
+        <th> Created Time </th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @orders.each do |order| %>
+        <tr>
+          <td> <%= link_to(order.id, order_path(order.token)) %> </td>
+          <td> <%= order.created_at.to_s(:long) %> </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
